HTML and CSS:3rd

--- a/amazon.html
+++ b/amazon.html
@@ -28,7 +28,7 @@
                         <option>Women's MakeUp Items</option>
                         <option>Baby Clothes</option>
                     </select>
-                    <input type="text" placeholder="Search Amazon" class="nav-input" >
+                    <input type="text" placeholder="Search Savers" class="nav-input" >
                     <div class="navbar-icon"><i class="fa-solid fa-magnifying-glass"></i> </div>
                 </div>
                 <div class="nav-sidebar">
@@ -56,8 +56,29 @@
         <span class="nav2">Gift Cards</span>
         <span class="nav2">Sells</span>
     </div>
-    
 </header>
+<div class="centerpart"></div>
+<div class="mainbox">
+
+    <div class="box1">
+        <h2>Gaming Acessories
+        </h2>
+        <div class="headset"></div>
+        <div class="keyboard"></div>
+    </div>
+    <div class="box2">
+        <h2>Krish(Hirku):Don</h2>
+    </div>
+    <div class="box3">
+        <h2>Yarshagumba:Per Piece Rs.1000</h2>
+    </div>
+    <div class="box4">
+        <h2>Lamborgini:3Million $</h2>
+    </div>
+
+</div>
+</div>
+
 
 </body>
-</html>
+</html> 
